tests/error/errors_on_usage/shadow_global2.err
Error: Variable not defined (at $FILE:18:4)
   | 
16 |     if b:
17 |         bar = foo
18 |     bar()
   |     ^^^ `bar` might be undefined ...
   | 
16 |     if b:
   |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
